fix:本地netty版本修改

--- a/extension-demo/consumer/src/main/resources/application.properties
+++ b/extension-demo/consumer/src/main/resources/application.properties
@@ -14,7 +14,7 @@ dubbo.export = true
 dubbo.token= extension_http_token
 
 dubbo.port = -1
-dubbo.host = outer
+dubbo.host = localhost
 
 dubbo.timeout = 20000
 
