--- a/extension-demo/consumer/pom.xml
+++ b/extension-demo/consumer/pom.xml
@@ -91,6 +91,11 @@
             <artifactId>httpcore</artifactId>
             <version>4.4.12</version>
         </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.36.Final</version>
+        </dependency>
     </dependencies>
 
 </project>
