--- a/extension-demo/provider/pom.xml
+++ b/extension-demo/provider/pom.xml
@@ -65,7 +65,11 @@
             <artifactId>spring-boot-starter-web</artifactId>
             <version>2.2.0.RELEASE</version>
         </dependency>
-
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.36.Final</version>
+        </dependency>
     </dependencies>
 
 </project>
